format swagger
