# src/controllers/UserController.js
@@ -7,24 +7,23 @@ const handleCatchError = require("../middleware/handleCatchErrors");
 class UserController {
   async findAll(req, res) {
     /*  
-        #swagger.tags = ['Usuarios']
-        #swagger.description = 'Endpoint para obtener todos los usuarios'
-        #swagger.responses[200] = {
-            description: 'Lista de usuarios obtenida con éxito',
-            schema: [{
-                id: "id de usuario",
-                name: "Nombre del usuario",
-                email: "usuario@example.com",
-                password: "hashed_password",
-                birth_date: "YYYY-MM-DD",
-                user_type: "guia" // o "turista"
-            }]
-        }
-        #swagger.responses[500] = {
-            description: 'Error interno del servidor'
-        }
+      #swagger.tags = ['Usuarios']
+      #swagger.description = 'Endpoint para obtener todos los usuarios'
+      #swagger.responses[200] = {
+        description: 'Lista de usuarios obtenida con éxito',
+        schema: [{
+          id: "ID de usuario",
+          name: "Nombre del usuario",
+          email: "usuario@example.com",
+          password: "hashed_password",
+          birth_date: "YYYY-MM-DD",
+          user_type: "guia" // o "turista"
+        }]
+      }
+      #swagger.responses[500] = {
+        description: 'Error interno del servidor'
+      }
     */
-
     try {
       const users = await User.findAll();
       if (res) {
@@ -32,46 +31,45 @@ class UserController {
       }
       return users;
     } catch (error) {
-      console.error(error);
       handleCatchError(error, res, "findAll_users");
     }
   }
+
   async create(req, res) {
     /*  
-    #swagger.tags = ['Usuarios']
-    #swagger.parameters['body'] = {
+      #swagger.tags = ['Usuarios']
+      #swagger.parameters['body'] = {
         in: 'body',
         description: 'Crear Usuario',
         required: true,
         schema: {
-            $name: "Um nome",
-            $email: "teste123@gmail.com",
-            $password: "teste123",
-            $birth_date: "Data de nascimento",
-            $user_type: "Tipo de usuario (guia) ou (turista)"
+          $name: "Nombre del usuario",
+          $email: "example@example.com",
+          $password: "password123",
+          $birth_date: "YYYY-MM-DD",
+          $user_type: "Tipo de usuario (guia) o (turista)"
         }
-    }
-    #swagger.responses[201] = {
+      }
+      #swagger.responses[201] = {
         description: 'Usuario creado con éxito',
         schema: {
-            message: "Usuario creado con éxito",
-            user: {
-                id: 1,
-                name: "Nombre del usuario",
-                email: "usuario@example.com",
-                birth_date: "YYYY-MM-DD",
-                user_type: "guia" // o "turista"
-            }
+          message: "Usuario creado con éxito",
+          user: {
+            id: 1,
+            name: "Nombre del usuario",
+            email: "usuario@example.com",
+            birth_date: "YYYY-MM-DD",
+            user_type: "guia" // o "turista"
+          }
         }
-    }
-    #swagger.responses[400] = {
+      }
+      #swagger.responses[400] = {
         description: 'Error de validación o email existente'
-    }
-    #swagger.responses[500] = {
+      }
+      #swagger.responses[500] = {
         description: 'Error interno del servidor'
-    }
-*/
-
+      }
+    */
     try {
       await userSchema.validate(req.body, {
         abortEarly: false,
@@ -82,7 +80,7 @@ class UserController {
 
       if (!birth_date.match(/\d{4}-\d{2}-\d{2}/gm)) {
         return res.status(400).json({
-          message: "Formato correto da data de nascimento e ANO-MES-DIA",
+          message: "Formato correcto de la fecha de nacimiento: AAAA-MM-DD",
         });
       }
 
@@ -91,9 +89,9 @@ class UserController {
       });
 
       if (existingUser) {
-        return res
-          .status(400)
-          .json("O email inserido já existe. Por favor, escolha outro.");
+        return res.status(400).json({
+          message: "El email ya está registrado. Por favor, elija otro.",
+        });
       }
 
       const hash = await bcrypt.hash(password, 8);
@@ -106,15 +104,16 @@ class UserController {
         user_type,
       });
 
-      res.status(201).json({ message: "Usuario criado com sucesso", user });
+      res.status(201).json({ message: "Usuario creado con éxito", user });
     } catch (error) {
       handleCatchError(error, res, "create_user");
     }
   }
+
   async delete(req, res) {
     /*  
-      #swagger.tags = ['Usarios']
-      #swagger.description = 'Eliminar un usuario'
+      #swagger.tags = ['Usuarios']
+      #swagger.description = 'Eliminar un usuario por ID'
       #swagger.parameters['id'] = {
         in: 'path',
         description: 'ID del usuario a eliminar',
@@ -142,33 +141,31 @@ class UserController {
       const authenticatedUserId = req.payload.sub;
 
       const user = await User.findByPk(id);
-      const tour = await Tour.findAll({
+      const tours = await Tour.findAll({
         where: { user_id: id },
       });
+
       if (!user) {
-        return res.status(404).json({ message: "Usuario não encontrado" });
+        return res.status(404).json({ message: "Usuario no encontrado" });
       }
 
-      if (tour.length > 0) {
+      if (tours.length > 0) {
         return res.status(403).json({
-          message:
-            "Usuário não pode ser eliminado, pois tem passeios associados!",
+          message: "Usuario no puede ser eliminado, tiene tours asociados",
         });
       }
 
       if (user.id !== authenticatedUserId) {
         return res.status(403).json({
-          message: "Você não tem permissão para eliminar este usuário.",
+          message: "No tienes permiso para eliminar este usuario.",
         });
       }
 
       await User.destroy({
-        where: {
-          id,
-        },
+        where: { id },
       });
 
-      res.status(200).json({ message: "Usuario eliminado com sucesso" });
+      res.status(200).json({ message: "Usuario eliminado con éxito" });
     } catch (error) {
       handleCatchError(error, res, "delete_user");
     }
